--- a/style.css
+++ b/style.css
@@ -13,13 +13,12 @@ body {
   margin: 0;
   min-height: 100vh;
   background: #16171b;
-  color: whitesmoke;
+  color: #f5f5f5;
 }
 
 h1 {
   text-align: center;
-  margin: 25px;
-  margin-bottom: 15px;
+  margin: 5px 25px 15px 25px;
   font-size: 40px;
   letter-spacing: 8px;
 }
@@ -47,6 +46,18 @@ h1 {
 .image-container img {
   width: 100%;
   margin-top: 5px;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: underline;
+  color: #f5f5f5;
+}
+
+p {
+  text-align: center;
+  margin: 10px 0px 0px;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 600px) {
